--- a/jyushoroku/.classpath
+++ b/jyushoroku/.classpath
@@ -11,6 +11,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/minam/Downloads/mysql-connector-java-8.0.17.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Tomcat9 (Java11)">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
